# YTManager

./: README.md  project.license  pyproject.toml  ytmanager.py
save/: settings.toml
src/: cat.py  create.py  done.py  path.py  save.py  status.py
