[project]
name = "ytmanager"
version = "0.1.0"
description = "Manages video projects and upload then automatically"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Isaque Sebold de Almeida",email = "isaquesalmeida@outlook.com"}
]
dependencies = [
	"click (>=8.1.8,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ytmanager = "ytmanager:main"
